2016-11-23  Steven G. Kargl  <kargl@gcc.gnu.org>

PR fortran/78297
	* trans-common.c (finish_equivalences): Do not dereference a NULL pointer.

2016-11-23  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/78297
	* gfortran.dg/pr78297.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@242802 138bc75d-0d04-0410-961f-82ee72b054a4